--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
                     
                 
                 <div class="language">
-                    <img src="flags/spain.png" alt="Spanish flag">
+                    <img src="spain.png" alt="Spanish flag">
                     <p>Native Spanish</p>
                 </div>
                 <div class="language">
-                    <img src="flags/italy.png" alt="Italian flag">
+                    <img src="italy.png" alt="Italian flag">
                     <p>Advanced Italian</p>
                 </div>
                 <div class="language">
-                    <img src="flags/uk.png" alt="UK flag">
+                    <img src="uk.png" alt="UK flag">
                     <p>Medium-Advanced English</p>
                 </div>
                 <div class="language">
-                    <img src="flags/france.png" alt="French flag">
+                    <img src="france.png" alt="French flag">
                     <p>Medium French</p>
                 </div>
                 <p>📚 Philosophies and intellectual movements from postcolonial era to contemporary literature</p>
