--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Gym en Casa. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Raul Caliz. Todos los derechos reservados.</p>
     </footer>
     <script src="js/app.js"></script>
 </body>
